--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <link rel="icon" href="photo_2024-05-02_15-06-42.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GHOST HUNTER CAT</title>
+    <title>SCARY CAT</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="css/animate.min.css">
 </head>
@@ -18,7 +18,7 @@
                 <img src="photo_2024-05-02_15-06-42.jpg" alt="">
             </div>
             <div class="right">
-                <h1 class="lucky">WELCOME TO GHOST HUNTER CAT</h1>
+                <h1 class="lucky">WELCOME TO SCARY CAT</h1>
                 <p class="single">HELP ME................ </p>
                 <a href="https://www.pump.fun/BRjsUhgmbEehHdwkJmZ6CJr7yqDff1mhDXTXTrpbMoZL" class="btn single">Pump.Fun</a>
             </div>
@@ -31,15 +31,15 @@
             <div class="content">
                 <div class="box">
                     <h2 class="lucky">Name</h2>
-                    <h2 class="lucky">GHOST HUNTER CAT</h2>
+                    <h2 class="lucky">SCARY CAT</h2>
                 </div>
                 <div class="box">
                     <h2 class="lucky">SYMBOL</h2>
-                    <h2 class="lucky">$GHCAT</h2>
+                    <h2 class="lucky">$SCAT</h2>
                 </div>
                 <div class="box">
                     <h2 class="lucky">SUPPLY</h2>
-                    <h2 class="lucky">GHOST HUNTER CAT</h2>
+                    <h2 class="lucky">SCARY CAT</h2>
                 </div>
                 <div class="box">
                     <h2 class="lucky">TAXES</h2>
