--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="right">
                 <h1 class="lucky">WELCOME TO SCARY CAT</h1>
                 <p class="single">HELP ME................ </p>
-                <a href="https://www.pump.fun/BRjsUhgmbEehHdwkJmZ6CJr7yqDff1mhDXTXTrpbMoZL" class="btn single">Pump.Fun</a>
+                <a href="https://www.pump.fun/" class="btn single">Pump.Fun</a>
             </div>
         </section>
         <marquee behavior="scroll" direction="right" class="strip">
