--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <img style="width: 100%; background: #a55d00;" src="images/waves.png" alt="">
         <div class="map">
-            <h1 class="lucky">ROADMAP <img src="photo_2024-05-02_15-06-42.jpg" alt=""></h1>
+            <h1 class="lucky">ROADMAP <img src="scarycat.jpg" alt=""></h1>
             <div class="content">
                 <div class="box">
                     <h3 class="lucky">Phase 1</h3>
