--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 <div class="box">
                     <h3 class="lucky">Phase 1</h3>
                     <h2 class="lucky">List token</h2>
-                    <h2 class="lucky">Build community trust</h2>
+                    <h2 class="lucky">KOTH PUMP.FUN</h2>
                 </div>
                 <div class="box">
                     <h3 class="lucky">Phase 2</h3>
-                    <h2 class="lucky">Marketing</h2>
                     <h2 class="lucky">LIST RAYDIUM</h2>
+                    <h2 class="lucky">MARKETING</h2>
                 </div>
                 <div class="box">
                     <h3 class="lucky">Phase 3</h3>
