--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
              <p class="single">A FAT CAT IS SCARED BECAUSE IT IS BEING CHASED BY A GHOST AND LOOKS FOR HELP</p>
         </marquee>
         <section class="tokenomics">
-            <h1 class="lucky">TOKENOMICS <img src="photo_2024-05-02_15-06-42.jpg" alt=""></h1>
+            <h1 class="lucky">TOKENOMICS <img src="scary.jpg" alt=""></h1>
             <div class="content">
                 <div class="box">
                     <h2 class="lucky">Name</h2>
