--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Mirrored from worldpeacecat.on-sol.xyz/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 May 2024 20:08:20 GMT -->
 <head>
     
-    <link rel="icon" href="photo_2024-05-02_15-06-42.jpg">
+    <link rel="icon" href="scarycat.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCARY CAT</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
